<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Network Finder</string>
    <string name="menu_settings">Settings</string>
    <string name="getting_location">Distance:</string>
    <string name="distance_description">0.0m</string>
    <string name="network_description">China Mobile</string>
    <string name="connect_label">Operator:</string>
    <string name="location_north">%s N</string>
    <string name="location_south">%s S</string>
    <string name="location_east">%s E</string>
    <string name="location_west">%s W</string>
    <string name="cannot_get_sensor">Cannot get any sensor</string>
    <string name="exit_toast">Click again exit application</string>
</resources>